        2.6.16 - 2.6.22 vanilla (kernel.org)
       * Due to recently discovered recovery problems, we do not recommend
        using patchless RHEL 4 clients with this or any earlier release.
       * Recommended e2fsprogs version: 1.40.2-cfs4
       * Note that reiserfs quotas are disabled on SLES 10 in this kernel.

Severity   : normal
Bugzilla   : 13969
Description: Update to RHEL5 kernel 2.6.18-8.1.15.el5.

Severity   : normal
Bugzilla   : 13874
Description: Update to SLES10 SP1 kernel 2.6.16.53-0.16

Severity   : enhancement
Bugzilla   : 13889
Description: Update to SLES9 kernel-2.6.5-7.287.3.

Severity   : enhancement
Bugzilla   : 14041
Description: Update to RHEL4 kernel-2.6.9-55.0.12.EL.

Severity   : enhancement
Bugzilla   : 13690
Description: Build SLES10 patchless client fails
Details    : The configure was broken by run ./configure with 
	     --with-linux-obj=.... argument for patchless client. When the
	     configure use --with-linux-obj, the LINUXINCLUDE= -Iinclude
	     can't search header adequately. Use absolute path such as 
	     -I($LINUX)/include instead. 

Severity   : enhancement
Bugzilla   : 11622
Description: Lustre Page Accounting
Details    : New macros for page alloc and free which enable accounting
	     of page allocation of Lustre. Use percpu counters to store memory
	     and page statistics.

Severity   : normal
Frequency  : only if debugging is disabled
Bugzilla   : 13497
Description: LASSERT_{REQ,REP}SWAB macros are buggy
Details    : If SWAB_PARANOIA is disabled, the LASSERT_REQSWAB and
	     LASSERT_REPSWAB macros become no-ops, which is incorrect. Drop
	     these macros and replace them with their difinitions instead.

Severity   : normal
Frequency  : rarely
Bugzilla   : 13888
Description: interrupt oig_wait produce painc on resend.
Details    : brw_redo_request can be used for resend requests from ptlrpcd and
	     private set, and this produce situation when rq_ptlrpcd_data not